# mini-projeto-logpulseai

./: README.md  TESTE-GITHUB-ACTIONS.md  logpulse.toml  pyproject.toml
.githooks/: README.md  commit-msg  pre-commit  pre-push  setup.ps1  setup.sh
.github/: settings.yml
.github/workflows/: approval-gate.yml  auto-add-to-project.yml  branch-validation.yml  commit-validation.yml  protect-main.yml  require-approval.yml  sync-tasks-to-kanban.yml
.kiro/specs/logpulse-ia/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/steering/: CONTRIBUTING.md  PROJECT.md  product.md  structure.md  tech.md
docs/: GITHUB_FLOW.md  tasks.md  validacoes-github.md
docs/prompts/02-especificacao/: prompts.md
scripts/: add-issues-to-project.sh
src/logpulse/: __init__.py  config.py  models.py
src/logpulse/ai/: __init__.py  engine.py
src/logpulse/analyzer/: __init__.py  engine.py
src/logpulse/cli/: __init__.py  main.py
src/logpulse/parsers/: __init__.py  auto.py  base.py  json_parser.py  plaintext_parser.py  syslog_parser.py
src/logpulse/sources/: __init__.py  base.py  file_source.py  stdin_source.py
tests/analyzer/: test_engine.py
tests/parsers/: test_json_parser.py
