[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logpulse-ia"
version = "0.1.0"
description = "Ferramenta CLI e biblioteca Python para ingestão, análise e investigação inteligente de logs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["logs", "cli", "ai", "llm", "monitoring", "observability"]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "orjson>=3.9.0",
    "pyparsing>=3.1.0",
    "watchdog>=4.0.0",
    "langchain>=0.2.0",
    "langchain-openai>=0.1.0",
    "openai>=1.30.0",
    "tomllib; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "hypothesis>=6.100.0",
    "mypy>=1.10.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "ruff>=0.4.0",
]

[project.scripts]
logpulse = "logpulse.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
